Removed Base64Encoder/Decoder dependency
git-svn-id: http://jira.uji.es/repos/uji/trunk@2997 e6edf6fb-f266-4316-afb4-e53d95876a76